--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Lecture_14</artifactId>
+    <artifactId>Lesson_16</artifactId>
     <version>1.0-SNAPSHOT</version>
     <repositories>
         <repository>
